add play round endpoint and trick winner logic